# PlotJuggler

./: CMakeLists.txt  vcpkg.json
plotjuggler_app/: CMakeLists.txt  curve_tracker.cpp  curvelist_panel.cpp  curvelist_view.cpp  main.cpp  mainwindow.cpp  menubar.cpp  plot_docker.cpp  plot_docker_toolbar.cpp  plot_docker_toolbar.h  plotwidget.cpp  plotwidget_editor.cpp  plotwidget_editor.h  plotwidget_transforms.cpp  tabbedplotwidget.cpp
plotjuggler_app/transforms/: function_editor.cpp  function_editor.h  python_custom_function.cpp
plotjuggler_base/src/: plotlegend.cpp  plotmagnifier.cpp  plotwidget_base.cpp  plotzoomer.cpp
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dialog_mcap.cpp
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt
plotjuggler_plugins/DataLoadULog/: CMakeLists.txt
plotjuggler_plugins/DataStreamFoxgloveBridge/: CMakeLists.txt
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt
plotjuggler_plugins/DataStreamPlotJugglerBridge/: CMakeLists.txt
plotjuggler_plugins/DataStreamSample/: CMakeLists.txt
plotjuggler_plugins/DataStreamSerialPort/: CMakeLists.txt
plotjuggler_plugins/DataStreamUDP/: CMakeLists.txt  udp_server.cpp
plotjuggler_plugins/DataStreamWebsocket/: CMakeLists.txt  websocket_server.cpp
plotjuggler_plugins/DataStreamZMQ/: CMakeLists.txt
plotjuggler_plugins/ParserDataTamer/: CMakeLists.txt
plotjuggler_plugins/ParserIDL/: CMakeLists.txt
plotjuggler_plugins/ParserLineInflux/: CMakeLists.txt  line_parser.cpp
plotjuggler_plugins/ParserProtobuf/: CMakeLists.txt
plotjuggler_plugins/ParserROS/: CMakeLists.txt
plotjuggler_plugins/PluginsZcm/: CMakeLists.txt
plotjuggler_plugins/ToolboxCSV/: CMakeLists.txt  toolbox_csv.cpp  toolbox_ui.cpp
plotjuggler_plugins/ToolboxFFT/: CMakeLists.txt  toolbox_FFT.cpp
plotjuggler_plugins/ToolboxLuaEditor/: CMakeLists.txt  lua_editor.cpp
plotjuggler_plugins/ToolboxMosaico/: CMakeLists.txt
plotjuggler_plugins/ToolboxMosaico/tests/: CMakeLists.txt
plotjuggler_plugins/ToolboxQuaternion/: CMakeLists.txt  toolbox_quaternion.cpp
plotjuggler_plugins/VideoViewer/: CMakeLists.txt
plotjuggler_plugins/ZcmUtils/: CMakeLists.txt
